version 3.0 Manu Exposito/tests/error/error5.prg


procedure error5()
	
	? 'Hello'
	
	error4()
	
return

//#include ap_getScriptPath() + 'error4.prg'
{% apr_fileLoad( ap_getScriptPath() + 'error4.prg' ) %}